snapshots/care/data4life/hc-result-sdk-kmp/error/ecb7fdf/error-ecb7fdf.pom.sha512
74e17dcfab0a802203e1fb6b7b71cdec5151d951eb9552c9b745f98d33ce95f1ac238e679253652fed82dbb6edca8794cb862c232742a5d010c0e8aa957e10ae